# bayesiangpu-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  python-wheels.yml  r-package.yml
benchmarks/: README.md  requirements.txt  run_benchmarks.py
benchmarks/adapters/: base.py  bayesiangpu_adapter.py  brms_adapter.py  cmdstan_adapter.py  numpyro_adapter.py  pymc_adapter.py
benchmarks/data/: generators.py
benchmarks/models/: __init__.py  gpu_scale.py  large.py  medium.py  registry.py  simple.py
benchmarks/r_scripts/: beta_binomial.R  deep_hierarchy.R  eight_schools.R  hierarchical_intercepts.R  linear_regression.R  logistic_regression.R  normal_mean.R
benchmarks/results/: bg_results.json  competitors_results.json  cpu_benchmark.json  full_benchmark.json  initial_run.json
benchmarks/runners/: harness.py  metrics.py  reporter.py
benchmarks/stan_models/: beta_binomial.stan  deep_hierarchy.stan  hierarchical_intercepts.stan  linear_regression.stan  logistic_regression.stan  normal_mean.stan
benchmarks/visualization/: charts.py
crates/bayesian-core/: Cargo.toml
crates/bayesian-core/src/: lib.rs  transforms.rs
crates/bayesian-core/src/distributions/: beta.rs  beta_binomial.rs  categorical.rs  cauchy.rs  chi_squared.rs  dirichlet.rs  dirichlet_multinomial.rs  discrete_uniform.rs  exponential.rs  gamma.rs  geometric.rs  gumbel.rs  half_cauchy.rs  half_normal.rs  half_student_t.rs  hypergeometric.rs  inverse_gamma.rs  laplace.rs  lkj_corr.rs  log_normal.rs  logistic.rs  mod.rs  multinomial.rs  multivariate_normal.rs  negative_binomial.rs  normal.rs  ordered_logistic.rs  pareto.rs  stick_breaking.rs  student_t.rs  truncated_normal.rs  uniform.rs  weibull.rs  zero_inflated_neg_binomial.rs  zero_inflated_poisson.rs
crates/bayesian-core/src/math/: mod.rs  special.rs
crates/bayesian-core/tests/: distribution_accuracy.rs  scipy_comparison.rs
crates/bayesian-diagnostics/: Cargo.toml
crates/bayesian-diagnostics/src/: compare.rs  divergences.rs  ess.rs  lib.rs  loo.rs  rhat.rs  summary.rs  waic.rs
crates/bayesian-diagnostics/tests/: arviz_comparison.rs  property_tests.rs
crates/bayesian-gpu-model/: Cargo.toml
crates/bayesian-py/: Cargo.toml  README.md  pyproject.toml
crates/bayesian-py/bayesiangpu/: __init__.py  _core.pyi
crates/bayesian-py/examples/: dash_app.py  eight_schools.py  requirements.txt  streamlit_app.py
crates/bayesian-py/src/: distributions.rs  lib.rs  model.rs  result.rs  sampler.rs
crates/bayesian-py/tests/: test_basic.py
crates/bayesian-rng/: Cargo.toml
crates/bayesian-rng/src/: lib.rs  pcg.rs
crates/bayesian-rng/src/wgsl/: rng.wgsl
crates/bayesian-sampler/: Cargo.toml
crates/bayesian-sampler/benches/: sampler_bench.rs
crates/bayesian-sampler/examples/: eight_schools.rs
crates/bayesian-sampler/src/: adaptation.rs  advi.rs  chain.rs  hmc.rs  leapfrog.rs  lib.rs  model.rs  nuts.rs
crates/bayesian-sampler/tests/: eight_schools.rs  integration_test.rs
crates/bayesian-wasm/: Cargo.toml
crates/bayesian-wasm/benches/: gpu_vs_cpu.rs
crates/bayesian-wasm/src/: backend.rs  gpu_model.rs  lib.rs
crates/bayesian-wasm/src/gpu/: context.rs  kernels.rs  mod.rs  sync.rs
crates/bayesian-wasm/src/gpu/shaders/: bernoulli_reduce.wgsl  beta_fused_reduce.wgsl  beta_grad_reduce.wgsl  beta_reduce.wgsl  binomial_reduce.wgsl  categorical_reduce.wgsl  cauchy_fused_reduce.wgsl  cauchy_grad_reduce.wgsl  cauchy_reduce.wgsl  exponential_fused_reduce.wgsl  exponential_grad_reduce.wgsl  exponential_reduce.wgsl  gamma_fused_reduce.wgsl  gamma_grad_reduce.wgsl  gamma_reduce.wgsl  half_cauchy_fused_reduce.wgsl  half_normal.wgsl  half_normal_fused_reduce.wgsl  half_normal_grad_reduce.wgsl  half_normal_reduce.wgsl  inverse_gamma_fused_reduce.wgsl  inverse_gamma_grad_reduce.wgsl  inverse_gamma_reduce.wgsl  laplace_fused_reduce.wgsl  logistic_fused_reduce.wgsl  lognormal_fused_reduce.wgsl  lognormal_grad_reduce.wgsl  lognormal_reduce.wgsl  negative_binomial_reduce.wgsl  normal.wgsl  normal_batch.wgsl  normal_fused_reduce.wgsl  normal_grad_reduce.wgsl  normal_indexed_reduce.wgsl  normal_linpred_fused_reduce.wgsl  normal_reduce.wgsl  poisson_reduce.wgsl  reduce_sum.wgsl  student_t_fused_reduce.wgsl  student_t_grad_reduce.wgsl  (+5 more)
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/api/: index.md
docs/examples/: linear-regression.md
docs/guide/: diagnostics.md  distributions.md  getting-started.md  index.md  installation.md  quickstart.md  what-is-bayesiangpu.md
docs/reference/: rust-api.md
examples/: node-wasm-test.mjs
examples/browser/: eight-schools.html  linear-regression.html  logistic-regression.html  poisson-counts.html  wasm-test.html
examples/python/: 01_coin_flip.py  02_normal_estimation.py  03_linear_regression.py  04_logistic_regression.py  05_hierarchical_model.py  06_poisson_regression.py
examples/r/: 01_coin_flip.R  02_normal_estimation.R  03_linear_regression.R  04_logistic_regression.R  05_eight_schools.R  06_poisson_regression.R
images/python/: Dockerfile.numpyro
images/r/: Dockerfile.brms  Dockerfile.brms-cuda
js/: .npmignore  README.md  package.json  tsconfig.json  typedoc.json
js/browser-test/: README.md  index.html
js/direct-gpu-test/: benchmark_scipy.py  generate_reference.py  index.html
js/examples/: eight_schools.mjs
js/src/: index.ts  inference.ts  model.ts  result.ts
js/tests/: model.test.ts  result.test.ts
js/types/: bayesiangpu.d.ts
r/: 404.html  LICENSE-text.html  LICENSE-text.md  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
r-package/bayesiangpu/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  _pkgdown.yml  configure
r-package/bayesiangpu/src/rust/: Cargo.toml
r-package/bayesiangpu/src/rust/src/: lib.rs
r/reference/: Bernoulli.html  Bernoulli.md  Beta.html  Beta.md  BetaBinomial.html  BetaBinomial.md  Binomial.html  Binomial.md  Categorical.html  (+83 more)
(+70 files in other folders)
