[package]
name = "bayesian-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core distributions and model definition for BayesianGPU"

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu", "burn/autodiff"]
# Feature for WASM builds - uses wgpu-no-std which is web-compatible
wasm = ["burn/wgpu", "burn/autodiff"]

[dependencies]
burn = { workspace = true, features = ["wgpu", "autodiff"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx = "0.5"
burn = { workspace = true, features = ["wgpu", "autodiff", "ndarray"] }
