[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bayesiangpu"
version = "0.1.0"
description = "GPU-accelerated Bayesian inference in Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "BayesianGPU", email = "info@bayesiangpu.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["bayesian", "mcmc", "statistics", "gpu", "inference", "nuts", "hmc"]

[project.optional-dependencies]
gpu = []
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.20",
    "arviz>=0.15",
]

[project.urls]
Homepage = "https://github.com/mojavedataops/bayesiangpu-core"
Documentation = "https://mojavedataops.github.io/bayesiangpu-core/docs/python"
Repository = "https://github.com/mojavedataops/bayesiangpu-core"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "bayesiangpu._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
